stash commit - wip

--- a/src/index.styl
+++ b/src/index.styl
@@ -21,4 +21,5 @@ body
   background #f6f6f6
   font 400 16px/18px 'Open Sans', sans-serif
 
+@require 'components/**/*.styl'
 @require 'styles/styles.styl'
