--- a/src/styles/global/_base.scss
+++ b/src/styles/global/_base.scss
@@ -9,6 +9,7 @@ body {
 
 body {
   position: relative;
-  line-height: 1.5;
   background: #fcfcfc;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5;
 }
